--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		<meta name="robots" content="noindex, nofollow" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="tap">
+	<body>
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
